// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`card first 1`] = `
<img
  alt="5 of hearts"
  data-nimg="1"
  decoding="async"
  draggable="false"
  fetchpriority="high"
  height="242"
  src="/SVG-cards-1.3/5_of_hearts.svg"
  style="color: transparent;"
  width="167"
/>
`;

exports[`card getFilename fancy 1`] = `
[
  "ace of clubs → /SVG-cards-1.3/ace_of_clubs.svg",
  "2 of clubs → /SVG-cards-1.3/2_of_clubs.svg",
  "3 of clubs → /SVG-cards-1.3/3_of_clubs.svg",
  "4 of clubs → /SVG-cards-1.3/4_of_clubs.svg",
  "5 of clubs → /SVG-cards-1.3/5_of_clubs.svg",
  "6 of clubs → /SVG-cards-1.3/6_of_clubs.svg",
  "7 of clubs → /SVG-cards-1.3/7_of_clubs.svg",
  "8 of clubs → /SVG-cards-1.3/8_of_clubs.svg",
  "9 of clubs → /SVG-cards-1.3/9_of_clubs.svg",
  "10 of clubs → /SVG-cards-1.3/10_of_clubs.svg",
  "jack of clubs → /SVG-cards-1.3/jack_of_clubs2.svg",
  "queen of clubs → /SVG-cards-1.3/queen_of_clubs2.svg",
  "king of clubs → /SVG-cards-1.3/king_of_clubs2.svg",
  "ace of diamonds → /SVG-cards-1.3/ace_of_diamonds.svg",
  "2 of diamonds → /SVG-cards-1.3/2_of_diamonds.svg",
  "3 of diamonds → /SVG-cards-1.3/3_of_diamonds.svg",
  "4 of diamonds → /SVG-cards-1.3/4_of_diamonds.svg",
  "5 of diamonds → /SVG-cards-1.3/5_of_diamonds.svg",
  "6 of diamonds → /SVG-cards-1.3/6_of_diamonds.svg",
  "7 of diamonds → /SVG-cards-1.3/7_of_diamonds.svg",
  "8 of diamonds → /SVG-cards-1.3/8_of_diamonds.svg",
  "9 of diamonds → /SVG-cards-1.3/9_of_diamonds.svg",
  "10 of diamonds → /SVG-cards-1.3/10_of_diamonds.svg",
  "jack of diamonds → /SVG-cards-1.3/jack_of_diamonds2.svg",
  "queen of diamonds → /SVG-cards-1.3/queen_of_diamonds2.svg",
  "king of diamonds → /SVG-cards-1.3/king_of_diamonds2.svg",
  "ace of hearts → /SVG-cards-1.3/ace_of_hearts.svg",
  "2 of hearts → /SVG-cards-1.3/2_of_hearts.svg",
  "3 of hearts → /SVG-cards-1.3/3_of_hearts.svg",
  "4 of hearts → /SVG-cards-1.3/4_of_hearts.svg",
  "5 of hearts → /SVG-cards-1.3/5_of_hearts.svg",
  "6 of hearts → /SVG-cards-1.3/6_of_hearts.svg",
  "7 of hearts → /SVG-cards-1.3/7_of_hearts.svg",
  "8 of hearts → /SVG-cards-1.3/8_of_hearts.svg",
  "9 of hearts → /SVG-cards-1.3/9_of_hearts.svg",
  "10 of hearts → /SVG-cards-1.3/10_of_hearts.svg",
  "jack of hearts → /SVG-cards-1.3/jack_of_hearts2.svg",
  "queen of hearts → /SVG-cards-1.3/queen_of_hearts2.svg",
  "king of hearts → /SVG-cards-1.3/king_of_hearts2.svg",
  "ace of spades → /SVG-cards-1.3/ace_of_spades.svg",
  "2 of spades → /SVG-cards-1.3/2_of_spades.svg",
  "3 of spades → /SVG-cards-1.3/3_of_spades.svg",
  "4 of spades → /SVG-cards-1.3/4_of_spades.svg",
  "5 of spades → /SVG-cards-1.3/5_of_spades.svg",
  "6 of spades → /SVG-cards-1.3/6_of_spades.svg",
  "7 of spades → /SVG-cards-1.3/7_of_spades.svg",
  "8 of spades → /SVG-cards-1.3/8_of_spades.svg",
  "9 of spades → /SVG-cards-1.3/9_of_spades.svg",
  "10 of spades → /SVG-cards-1.3/10_of_spades.svg",
  "jack of spades → /SVG-cards-1.3/jack_of_spades2.svg",
  "queen of spades → /SVG-cards-1.3/queen_of_spades2.svg",
  "king of spades → /SVG-cards-1.3/king_of_spades2.svg",
  "joker of clubs → /SVG-cards-1.3/black_joker.svg",
  "joker of diamonds → /SVG-cards-1.3/red_joker.svg",
  "joker of hearts → /SVG-cards-1.3/red_joker.svg",
  "joker of spades → /SVG-cards-1.3/black_joker.svg",
  "card back → Card_back_10.svg",
]
`;

exports[`card getFilename simple 1`] = `
[
  "ace of clubs → /SVG-cards-1.3/ace_of_clubs.svg",
  "2 of clubs → /SVG-cards-1.3/2_of_clubs.svg",
  "3 of clubs → /SVG-cards-1.3/3_of_clubs.svg",
  "4 of clubs → /SVG-cards-1.3/4_of_clubs.svg",
  "5 of clubs → /SVG-cards-1.3/5_of_clubs.svg",
  "6 of clubs → /SVG-cards-1.3/6_of_clubs.svg",
  "7 of clubs → /SVG-cards-1.3/7_of_clubs.svg",
  "8 of clubs → /SVG-cards-1.3/8_of_clubs.svg",
  "9 of clubs → /SVG-cards-1.3/9_of_clubs.svg",
  "10 of clubs → /SVG-cards-1.3/10_of_clubs.svg",
  "jack of clubs → /SVG-cards-1.3/jack_of_clubs.svg",
  "queen of clubs → /SVG-cards-1.3/queen_of_clubs.svg",
  "king of clubs → /SVG-cards-1.3/king_of_clubs.svg",
  "ace of diamonds → /SVG-cards-1.3/ace_of_diamonds.svg",
  "2 of diamonds → /SVG-cards-1.3/2_of_diamonds.svg",
  "3 of diamonds → /SVG-cards-1.3/3_of_diamonds.svg",
  "4 of diamonds → /SVG-cards-1.3/4_of_diamonds.svg",
  "5 of diamonds → /SVG-cards-1.3/5_of_diamonds.svg",
  "6 of diamonds → /SVG-cards-1.3/6_of_diamonds.svg",
  "7 of diamonds → /SVG-cards-1.3/7_of_diamonds.svg",
  "8 of diamonds → /SVG-cards-1.3/8_of_diamonds.svg",
  "9 of diamonds → /SVG-cards-1.3/9_of_diamonds.svg",
  "10 of diamonds → /SVG-cards-1.3/10_of_diamonds.svg",
  "jack of diamonds → /SVG-cards-1.3/jack_of_diamonds.svg",
  "queen of diamonds → /SVG-cards-1.3/queen_of_diamonds.svg",
  "king of diamonds → /SVG-cards-1.3/king_of_diamonds.svg",
  "ace of hearts → /SVG-cards-1.3/ace_of_hearts.svg",
  "2 of hearts → /SVG-cards-1.3/2_of_hearts.svg",
  "3 of hearts → /SVG-cards-1.3/3_of_hearts.svg",
  "4 of hearts → /SVG-cards-1.3/4_of_hearts.svg",
  "5 of hearts → /SVG-cards-1.3/5_of_hearts.svg",
  "6 of hearts → /SVG-cards-1.3/6_of_hearts.svg",
  "7 of hearts → /SVG-cards-1.3/7_of_hearts.svg",
  "8 of hearts → /SVG-cards-1.3/8_of_hearts.svg",
  "9 of hearts → /SVG-cards-1.3/9_of_hearts.svg",
  "10 of hearts → /SVG-cards-1.3/10_of_hearts.svg",
  "jack of hearts → /SVG-cards-1.3/jack_of_hearts.svg",
  "queen of hearts → /SVG-cards-1.3/queen_of_hearts.svg",
  "king of hearts → /SVG-cards-1.3/king_of_hearts.svg",
  "ace of spades → /SVG-cards-1.3/ace_of_spades2.svg",
  "2 of spades → /SVG-cards-1.3/2_of_spades.svg",
  "3 of spades → /SVG-cards-1.3/3_of_spades.svg",
  "4 of spades → /SVG-cards-1.3/4_of_spades.svg",
  "5 of spades → /SVG-cards-1.3/5_of_spades.svg",
  "6 of spades → /SVG-cards-1.3/6_of_spades.svg",
  "7 of spades → /SVG-cards-1.3/7_of_spades.svg",
  "8 of spades → /SVG-cards-1.3/8_of_spades.svg",
  "9 of spades → /SVG-cards-1.3/9_of_spades.svg",
  "10 of spades → /SVG-cards-1.3/10_of_spades.svg",
  "jack of spades → /SVG-cards-1.3/jack_of_spades.svg",
  "queen of spades → /SVG-cards-1.3/queen_of_spades.svg",
  "king of spades → /SVG-cards-1.3/king_of_spades.svg",
  "joker of clubs → /SVG-cards-1.3/black_joker.svg",
  "joker of diamonds → /SVG-cards-1.3/red_joker.svg",
  "joker of hearts → /SVG-cards-1.3/red_joker.svg",
  "joker of spades → /SVG-cards-1.3/black_joker.svg",
  "card back → Card_back_10.svg",
]
`;
